address sonar warnings